feat: ॠ«¨§®¢ ­  ¬­®£®⥭ ­⭠ï á¨á⥬   㤨â , usage analytics ¨ hardening AI-¯஢ ©¤¥஢
- ¤®¡ ¢«¥­  ¨§®«ïæ¨ï audit events ¯® organizationId
- ¤®¡ ¢«¥­ë PlatformProperties ¨ recordSystem ¤«ï á¨á⥬­ëå audit-ᮡë⨩
- § ¯à¥饭  § ¯¨áì audit-ᮡë⨩ ¡¥§ organizationId
- ¤®¡ ¢«¥­  䨫ìâà æ¨ï  㤨â  ¯® ⨯ã ᮡëâ¨ï, ¯®«짮¢ ⥫î, ®࣠­¨§ 樨 ¨ ¤ ⠬
- à áè¨७ë usage endpoints 䨫ìâࠬ¨ dateFrom/dateTo/model
- ¢뭥ᥭë usage-§ ¯à®áë ¢ UsageQueryRepository
- ¤®¡ ¢«¥­ë status ᮮ¡饭¨©, updatedAt ç ⮢ ¨ per-chat Redis lock
- ã«ãç襭  ®¡ࠡ®⪠ rate limit ¨ ®訡®ª AI-¯஢ ©¤¥஢
- ¤®¡ ¢«¥­ë maxOutputTokens ¤«ï OpenAI ¨ latency/token logging
- ã«ãç襭  ­®ଠ«¨§ æ¨ï AiChatResponse
- ã«ãç襭 Redis rate limiter
- ®¡­®¢«¥­ë â¥áâë audit, usage, AI, security ¨ chat-᫮ñ¢